; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dnxhddata.c_dnxhd_find_hr_cid.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dnxhddata.c_dnxhd_find_hr_cid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @dnxhd_find_hr_cid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dnxhd_find_hr_cid(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %12 [
    i32 132, label %7
    i32 130, label %8
    i32 131, label %9
    i32 128, label %10
    i32 129, label %11
  ]

7:                                                ; preds = %1
  store i32 1270, i32* %2, align 4
  br label %13

8:                                                ; preds = %1
  store i32 1271, i32* %2, align 4
  br label %13

9:                                                ; preds = %1
  store i32 1272, i32* %2, align 4
  br label %13

10:                                               ; preds = %1
  store i32 1273, i32* %2, align 4
  br label %13

11:                                               ; preds = %1
  store i32 1274, i32* %2, align 4
  br label %13

12:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %13

13:                                               ; preds = %12, %11, %10, %9, %8, %7
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
